<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.match.DetailsMatchActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleTextAppearance="@android:color/transparent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/imgHeader"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.github.ybq.android.spinkit.SpinKitView
                android:id="@+id/progressBar"
                style="@style/SpinKitView.Wave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:visibility="gone"
                app:SpinKit_Color="@android:color/black" />

            <LinearLayout
                android:id="@+id/linear2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="24dp">

                <TextView
                    android:id="@+id/matchName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/firasans"
                    android:gravity="center"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    tools:text="Judul Pertandingan" />

                <TextView
                    android:id="@+id/dateMatch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:fontFamily="@font/firasans"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:textStyle="italic"
                    tools:text="Waktu Pertandingan" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/relative2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linear2"
                android:layout_marginTop="8dp"
                android:padding="24dp">

                <TextView
                    android:id="@+id/homeName"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:fontFamily="@font/firasans"
                    tools:text="ScoreAway" />

                <TextView
                    android:id="@+id/textTeamName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/firasans"
                    android:text="Team Name"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/awayName"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:fontFamily="@font/firasans"
                    android:gravity="end"
                    tools:text="Score Home" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relative3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/relative2"
                android:layout_marginTop="8dp"
                android:padding="24dp">

                <TextView
                    android:id="@+id/scoreHome"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:fontFamily="@font/firasans"
                    tools:text="ScoreAway" />

                <TextView
                    android:id="@+id/textScore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/firasans"
                    android:text="Score"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/scoreAway"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:fontFamily="@font/firasans"
                    android:gravity="end"
                    tools:text="Score Home" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/relative3"
                android:layout_marginTop="8dp"
                android:padding="24dp">

                <TextView
                    android:id="@+id/homeFormation"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:fontFamily="@font/firasans"
                    tools:text="ScoreAway" />

                <TextView
                    android:id="@+id/textFormation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/firasans"
                    android:text="Formation"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/awayFormation"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:fontFamily="@font/firasans"
                    android:gravity="end"
                    tools:text="Score Home" />
            </RelativeLayout>
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="6dp"
        app:pressedTranslationZ="12dp"
        android:src="@drawable/ic_add_favorite"
        android:layout_marginEnd="8dp"
        android:id="@+id/fabFavorite"
        app:layout_anchor="@id/app_bar_layout"
        app:layout_anchorGravity="bottom|right|end"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>