<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin"
    tools:context=".fragment.league.NextMatchFragment">

    <!-- TODO: Update blank fragment layout -->
    <com.github.ybq.android.spinkit.SpinKitView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/progressBar"
        style="@style/SpinKitView.Wave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        app:SpinKit_Color="@android:color/black" />

    <TextView
        android:id="@+id/textNoData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="No Match"
        android:gravity="center"
        android:fontFamily="@font/firasans"
        android:textSize="20sp"
        android:visibility="gone"
        android:layout_gravity="center|center_horizontal"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</FrameLayout>